Pprimera version mobile menu burger corrections to icon and heigth

--- a/src/assets/styles/mediaQuery.css
+++ b/src/assets/styles/mediaQuery.css
@@ -25,7 +25,7 @@
                         position: fixed;
                         padding-top: 10px;
                         background-color:rgba(255, 255, 255, 0.74);
-                        height: 60px;
+                        
                         
                     }
                     .topnav.responsive {
